# plam-event

./: .gitignore  Cargo.toml  README.md  atom.xml  events.json  index.html
.github/workflows/: publish.yml
src/: main.rs  template.html
