[package]
name = "plam-event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12"
tokio = { version = "1.20", features = ["full"] }
typed-builder = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
atom_syndication = "0.12"
chrono = "0.4"
rss = "2.0"
